fix(QF-4426): fix homepage hero background visible on overscroll (#2983)

--- a/src/components/HomePage/HomePageHero.module.scss
+++ b/src/components/HomePage/HomePageHero.module.scss
@@ -3,6 +3,7 @@
 
 .outerContainer {
   position: relative;
+  overflow: hidden;
 }
 
 .backgroundImage {
